fix(modal): update box-shadow for modal content to improve visibility

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -61,7 +61,7 @@
   position: relative;
   background-color: $col-light;
   border-radius: 16px;
-  box-shadow: 0 20px 25px -5px rgba(65, 56, 56, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   width: min(100% - rem(12), rem(510));
   overflow-y: auto;
   transform: scale(0.9);
